# bough

./: .gitattributes  .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md  TODO.spec-issues.md  bough.config.toml  cliff.toml  dist-workspace.toml  example.bough.toml  example.pollard.toml  ideal.config.toml  northstar  northstart  package-lock.json  pollard.toml  release.toml  temp.toml
.config/: bough.toml  nextest.toml
.config/tracey/: config.styx
.github/workflows/: deploy-docs.yml  publish.yml  release.yml  test.yml
crates/bough-cli/: Cargo.toml  Config_SPEC.md  demo
crates/bough-cli-test/: Cargo.toml
crates/bough-cli-test-macros/: Cargo.toml
crates/bough-cli-tests/: Cargo.toml  build.rs
crates/bough-cli/src/: config.rs  find_best_mutations.rs  io.rs  lib.rs  main.rs  phase_runner.rs  render.rs  run.rs  show_all_files.rs  show_all_mutations.rs  show_file_mutations.rs  show_language_files.rs  show_language_mutations.rs  show_single_mutation.rs  step_apply_mutation.rs  step_init_workspace.rs  step_reset_workspace.rs  step_tend_state.rs  step_tend_workspaces.rs  step_test_mutation.rs  step_unapply_mutation.rs
crates/bough-cli/src/mutate/: apply.rs  describe.rs  generate.rs  mod.rs  view.rs
crates/bough-cli/src/steps/: apply_mutant_to_workspace.rs  clean.rs  cleanup.rs  create_workspaces.rs  derive_mutants.rs  drop_workspace.rs  find_files.rs  get_all_test_ids.rs  get_mutation_result.rs  get_mutations.rs  get_src_files.rs  init_workspace.rs  list_workspaces.rs  make_workspace.rs  mod.rs  mutate_workspace.rs  reset_workspace.rs  setup_workspace.rs  show_src_files.rs  test_workspace.rs
crates/bough-cli/tests/: cli.rs
crates/bough-cli/tests/fixtures/: full.config.toml  override.config.toml
crates/bough-config/: Cargo.toml
crates/bough-config/src/: config.rs  error.rs  factor.rs  find_mutations_config.rs  language_config.rs  language_skip_config.rs  lib.rs  phase_config.rs  phase_overrides.rs  session_config.rs  test_phase_config.rs  timeout_config.rs
crates/bough-core/: BASE_SPEC.md  Cargo.toml  FACET_DISK_STORE_SPEC.md  FILE_SPEC.md  MUTANTSITER_SPEC.md  MUTANTS_ITER_SPEC.md  MUTANT_SPEC.md  MUTATIONITER_SPEC.md  MUTATION_ITER_SPEC.md  MUTATION_SPEC.md  PHASE_SPEC.md  SESSION_SPEC.md  SPEC.md  WORKSPACE_SPEC.md
crates/bough-core/src/: base.rs  config.rs  facet_disk_store.rs  file.rs  io.rs  lib.rs  mutant.rs  mutation.rs  mutation_score.rs  outcome.rs  phase.rs  session.rs  source.rs  state.rs  suite.rs  test.rs  test_id.rs  twig.rs  workspace.rs
crates/bough-core/src/config/: ideal.config.toml  minimal.config.toml  mod.rs  phase.rs  suite.rs
crates/bough-core/src/language/: c.rs  cpp.rs  cs.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rb.rs  rs.rs  swift.rs  typescript.rs  zig.rs
crates/bough-core/src/languages/: javascript.rs  mod.rs  typescript.rs
crates/bough-core/src/mutant/: mod.rs  mutation.rs
crates/bough-core/src/mutant/language/: javascript.rs  mod.rs
crates/bough-corpus-tests/: Cargo.toml  build.rs
crates/bough-corpus-tests/src/: lib.rs
crates/bough-dirs/: Cargo.toml
crates/bough-dirs/src/: base.rs  lib.rs  work.rs  workspace.rs
crates/bough-docs-cli/: Cargo.toml
crates/bough-docs-cli/src/: build.rs  facet_reference.rs  layout.css  main.rs  serve.rs
crates/bough-fs/: Cargo.toml
crates/bough-fs/src/: file.rs  lib.rs  twig.rs
crates/bough-glob/: Cargo.toml
crates/bough-glob/benches/: walk.rs
crates/bough-glob/src/: builder.rs  glob.rs  lib.rs  walker.rs
crates/bough-glob/tests/: pbt.rs
crates/bough-lang-c/: Cargo.toml
crates/bough-lang-c/src/: lib.rs
crates/bough-lang-cpp/: Cargo.toml
crates/bough-lang-cpp/src/: lib.rs
crates/bough-lang-cs/: Cargo.toml
crates/bough-lang-cs/src/: lib.rs
crates/bough-lang-go/: Cargo.toml
crates/bough-lang-go/src/: lib.rs
crates/bough-lang-java/: Cargo.toml
crates/bough-lang-java/src/: lib.rs
crates/bough-lang-javascript/: Cargo.toml
crates/bough-lang-javascript/src/: lib.rs
crates/bough-lang-python/: Cargo.toml
crates/bough-lang-python/src/: lib.rs
crates/bough-lang-ruby/: Cargo.toml
crates/bough-lang-ruby/src/: lib.rs
crates/bough-lang-rust/: Cargo.toml
crates/bough-lang-rust/src/: lib.rs
crates/bough-lang-swift/: Cargo.toml
crates/bough-lang-typescript/: Cargo.toml
crates/bough-lang-typescript/src/: lib.rs
crates/bough-lang-zig/: Cargo.toml
crates/bough-lang-zig/src/: lib.rs
crates/bough-lib/: Cargo.toml
crates/bough-lib/src/: base.rs  base_ops.rs  core_tests.rs  dirs_ops.rs  lib.rs  mutation_score.rs  phase.rs  session.rs  state.rs  test_id.rs  uncovered.rs  workspace.rs
crates/bough-lib/src/language/: mod.rs
crates/bough-session/: Cargo.toml
crates/bough-session-derive/: Cargo.toml
crates/bough-session/src/: config.rs  lib.rs
crates/bough-session/tests/: smoke.rs
crates/bough-sha/: Cargo.toml
crates/bough-sha-derive/: Cargo.toml
crates/bough-typed-hash/: Cargo.toml
crates/bough-typed-hash-derive/: Cargo.toml
crates/bough-typed-hash/src/: error.rs  lib.rs  store.rs  tests.rs  unvalidated.rs
crates/pollard-cli/: Cargo.toml
crates/pollard-cli/src/: action.rs  feedback.rs  io.rs  main.rs  session.rs
crates/pollard-cli/src/mutate/: apply.rs  describe.rs  generate.rs  mod.rs  view.rs
crates/pollard-cli/src/steps/: apply.rs  apply_mutant_to_workspace.rs  build.rs  cleanup.rs  create.rs  create_workspaces.rs  derive_mutants.rs  find_files.rs  install.rs  mod.rs  plan.rs  reset.rs  reset_workspace.rs  setup_workspace.rs  test.rs  test_workspace.rs
crates/pollard-core/: Cargo.toml
crates/pollard-core/src/: config.rs  io.rs  lib.rs  plan.rs
crates/pollard-core/src/languages/: common.rs  javascript.rs  mod.rs  typescript.rs
crates/pollard-lib/: Cargo.toml
crates/pollard-session/: Cargo.toml
crates/pollard-session-derive/: Cargo.toml
crates/pollard-session/src/: config.rs  lib.rs
crates/pollard-session/tests/: smoke.rs
docs/: bough.config.toml  getting-started.md  index.md  installation.md
docs/config/: index.md  init.md  javascript.md  python.md  reference.md  (+2 more)
(+3814 files in other folders)
