[package]
name = "bough-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for bough mutation testing"

[dependencies]
bough-core = { path = "../bough-core", version = "0.0.1" }
bough-typed-hash = { path = "../bough-typed-hash", version = "0.0.1" }
facet = "0.44"
facet-json = "0.44"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
facet-toml = "0.44"
facet-yaml = "0.44"
figue = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
serial_test = "3"
tempfile = "3.26"
