[package]
name = "bough-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for bough mutation testing"

[dependencies]
bough-core = { workspace = true }
bough-typed-hash = { workspace = true }
facet = "0.44"
facet-json = "0.44"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
facet-toml = "0.44"
facet-yaml = "0.44"
figue = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
chrono = "0.4.44"

[dev-dependencies]
serial_test = "3"
tempfile = "3.26"
