[[bin]]
name = "bough"
path = "src/main.rs"

[package]
name = "bough-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for bough mutation testing"

[features]
pprof = ["dep:pprof"]

[dependencies]
bough-config = { workspace = true }
bough-core = { workspace = true }
bough-lib = { workspace = true }
bough-typed-hash = { workspace = true }
facet = { version = "0.44", features = ["doc"] }
facet-json = "0.44"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
facet-toml = "0.44"
facet-yaml = "0.44"
figue = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
chrono = "0.4.44"
ctrlc = "3"
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"], optional = true }

[dev-dependencies]
bough-lang-javascript = { path = "../bough-lang-javascript" }
bough-lang-typescript = { path = "../bough-lang-typescript" }
serial_test = "3"
tempfile = "3.26"
