[package]
name = "bough-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Configuration types for bough mutation testing"

[dependencies]
bough-core = { workspace = true }
facet = { version = "0.44", features = ["doc"] }
chrono = "0.4.44"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
