[package]
name = "bough-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core mutation testing types and traits for bough"

[dependencies]
bough-typed-hash = { workspace = true }
bough-fs = { workspace = true }
facet = { version = "0.44", features = ["uuid", "chrono"] }
arborium-tree-sitter = "2.16"
tracing = "0.1"

[dev-dependencies]
bough-fs = { workspace = true, features = ["test-support"] }
tempfile = "3.26"
