[package]
name = "bough-corpus-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Corpus-based mutation snapshot tests for bough"

[dependencies]
bough-core = { workspace = true }
bough-dirs = { workspace = true }
bough-lib = { path = "../bough-lib" }
sha2 = "0.10"
hex = "0.4"
facet-json = "0.44.1"

tempfile = "3.26"
