[[bin]]
name = "bough-docs"
path = "src/main.rs"

[package]
name = "bough-docs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Documentation site generator for bough"

[dependencies]
facet = { version = "0.44", features = ["doc"] }
facet-core = "0.44"
figue = "2"
arborium = { version = "2.16", features = ["lang-rust",

"lang-javascript", "lang-typescript", "lang-python", "lang-toml", "lang-bash", "lang-json", "lang-html", "lang-css"] }
comrak = { version = "0.36", default-features = false }
tiny_http = "0.12"
markdown-frontmatter = { version = "0.5", default-features = false, features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
bough-cli = { path = "../bough-cli" }
bough-core = { path = "../bough-core" }
serde_json = "1"
notify-debouncer-mini = "0.7"
notify = "8"
