[package]
name = "bough-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Filesystem types for bough: Root, Twig, File"

[dependencies]
bough-typed-hash = { workspace = true }
facet = { version = "0.44" }
ignore = "0.4"
tracing = "0.1"

[features]
test-support = []

[dev-dependencies]
tempfile = "3.26"
