[package]
name = "bough-glob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Globbing system for bough with globset-compatible semantics"

[dependencies]
bough-fs = { workspace = true }
crossbeam-channel = "0.5"
globset = "0.4"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3"
bough-fs = { workspace = true, features = ["test-support"] }
criterion = { version = "0.5", features = ["html_reports"] }
globset = "0.4"
ignore = "0.4"
tempfile = "3.26"

[[bench]]
name = "walk"
harness = false
