[package]
name = "bough-lang-java"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Java language driver for bough mutation testing"

[dependencies]
bough-core = { workspace = true }
arborium-tree-sitter = "2.16"
arborium-java = "2.16"
tracing = "0.1"
