[package]
name = "bough-lang-zig"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Zig language driver for bough mutation testing"

[dependencies]
bough-core = { workspace = true }
arborium-tree-sitter = "2.16"
arborium-zig = "2.16"
tracing = "0.1"
