[package]
name = "bough-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
bough-core = { path = "../bough-core" }
bough-session-derive = { path = "../bough-session-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.3"
