[package]
name = "bough-typed-hash"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
disk = ["facet-json"]

[dependencies]
sha2 = "0.10"
facet = "0.44"
facet-json = { version = "0.44", optional = true }
bough-typed-hash-derive = { path = "../bough-typed-hash-derive" }

[dev-dependencies]
facet-json = "0.44"
tempfile = "3"
