[package]
name = "bough-typed-hash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe content-addressable hashing for bough"

[dependencies]
sha2 = "0.10"
tracing = "0.1"
facet = "0.44"
bough-typed-hash-derive = { path = "../bough-typed-hash-derive", version = "0.0.2" }

[dev-dependencies]
tempfile = "3"
