[package]
name = "pollard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pollard-core = { path = "../pollard-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
