[package]
name = "pollard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
glob = "0.3.3"
log = "0.4"
pollard-core = { path = "../pollard-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
terminal_size = "0.4"
