[package]
name = "pollard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
glob = "0.3.3"
pollard-core = { path = "../pollard-core" }
pollard-session = { path = "../pollard-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
terminal_size = "0.4"
