[package]
name = "pollard-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
toml = "1.0.3"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
