[package]
name = "pollard-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
pollard-core = { path = "../pollard-core" }
pollard-session-derive = { path = "../pollard-session-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.3"
